# CarbonLens

./: .coveragerc  .gitignore  API_FIX_SUMMARY.md  API_PARAMETER_REFERENCE.md  API_RESOLUTION_GUIDE.md  BASELINE_INTEGRATION_ANALYSIS.md  BASELINE_INTEGRATION_SUMMARY.txt  BASELINE_MCP_GUARDRAILS_GUIDE.md  CHARTS_GENERATED.txt  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  CODEBASE_STRUCTURE_ANALYSIS.md  CODE_REVIEW_REPORT.md  COMPLEX_QUESTIONS_TEST.md  COMPREHENSIVE_TEST_RESULTS.md  CONTRIBUTING.md  DATABASE_FIX_GUIDE.md  DELIVERY_SUMMARY.txt  DIAGNOSIS_REPORT.md  DataSet_ElectricityMaps.py  Dockerfile.server  Dockerfile.ui  FINAL_SESSION_SUMMARY.md  FINAL_SIGN_OFF.txt  FINAL_VERIFICATION.md  FIXES_APPLIED.md  GUARDRAILS_SUMMARY.txt  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  LICENSE  MCP_ENHANCEMENT_GUIDE.md  MCP_ENHANCEMENT_IMPLEMENTATION_SUMMARY.md  MCP_ENHANCEMENT_INDEX.md  MCP_SLIDE_DESIGNS.txt  Makefile  PHASE4_EXECUTIVE_SUMMARY.txt  PROFESSIONAL_CHARTS_README.md  PROJECT_SUMMARY_ASCII.txt  QUICKSTART.md  QUICK_REFERENCE.md  (+53 more)
.github/: dependabot.yml
config/: Dockerfile.server
docs/: API.md  ARCHITECTURE.md  BASELINE_INTEGRATION_PRESENTATION.md  BASELINE_TESTING_QUICK_REFERENCE.md  BASELINE_VS_MCP_STRATEGY.md  CLIMATEGPT_INNOVATION_ROADMAP.md  DEPENDENCY_AUDIT.md  DEPLOYMENT.md  MCP_INNOVATION_ROADMAP.md  MCP_MIGRATION_CHECKLIST.md  MIGRATION_COMPLETE.md  PERSONA_DATA_UTILIZATION_GUIDE.md  PERSONA_IMPROVEMENT_RESULTS.md  PRESENTATION_SLIDES_PERSONA_TESTING.md  PROJECT_COMPLETION_SUMMARY.md  QUICKSTART_STREAMLIT.md  README.md  STREAMLIT_UI_GUIDE.md  (+6 more)
(+156 files in other folders)
